Delay fading out of player cards to reduce jumpiness, and delay tooltips to avoid overlapping.

--- a/css/spni.css
+++ b/css/spni.css
@@ -3031,12 +3031,14 @@ label {
 
     opacity: 0.50;
     transition-property: opacity;
+    transition-delay: 1s;
     transition-duration: 0.5s;
 }
 
 .ui-minimal .player-card-area:hover, .ui-minimal .player-card-area:active, .ui-minimal.prompt-exchange .player-card-area {
     opacity: 1.0;
     transition-property: opacity;
+    transition-delay: 0s;
     transition-duration: 0.25s;
 }
 
@@ -3049,6 +3051,7 @@ label {
 
     transition-property: width, height, margin, border-radius, border-width;
     transition-duration: 0.5s;
+    transition-delay: 1s;
 }
 
 .ui-minimal .player-card-area:hover .large-card-image,
@@ -3060,8 +3063,8 @@ label {
     border-width: 0.2rem;
     margin: 0 0.2rem;
 
-    transition-property: width, height, margin, border-radius, border-width;
     transition-duration: 0.25s;
+    transition-delay: 0s;
 }
 
 #player-game-clothing-area-minimal {
